criando uma função para remover o item do carrinho e estará pronto

--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,10 @@ body{
   color: black;
   text-decoration: underline;
 }
+
+.description{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-family: sans-serif;
+}
